Change balance constraints

--- a/Data_center_operation_part1.ipynb
+++ b/Data_center_operation_part1.ipynb
@@ -1108,6 +1108,19 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Insights:**\n",
+        "\n",
+        "- **Shift to Newer Generations:** Across all latency levels, demand moves from servers (S1, S2) to newer ones (S3, S4) over time. Servers S1 and S2 can be considered older generations, while S3 and S4 represent the newest technologies. This transition reflects the growing need for more advanced server capabilities as operational demands increase.\n",
+        "\n",
+        "- **Increasing GPU Demand:** Demand for newer GPU servers (especially S3) grows steadily, highlighting the rising importance of GPUs in modern workloads.\n",
+        "\n",
+        "- **Decrease in Demand Across Latency Sensitivity Levels:** The demand gradually decreases from low latency sensitivity to high latency sensitivity over time. This could be because of the higher selling price for the servers with higher latency sensitivity."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "p2Nn5NRWhbAw"
       },
@@ -1426,8 +1439,8 @@
         "\n",
         "**3.2 Balance Move-To and Remove-From:**\n",
         "\\begin{align}\n",
-        "    \\sum move\\_to_{ts, sg, dc, life} &= \\sum remove\\_from_{ts, sg, dc, life} \\\\\n",
-        "    &\\quad \\forall \\ ts \\in T, sg \\in SG, dc \\in DC, life \\in [2, life\\_expectancy]\n",
+        "    \\sum_{\\text{dc} \\in \\text{datacenters}} \\text{move\\_to}_{ts, sg, dc, life} = \\sum_{\\text{dc} \\in \\text{datacenters}} \\text{remove\\_from}_{ts, sg, dc, life} \\\\\n",
+        "    &\\quad \\forall \\ ts \\in T, sg \\in SG, life \\in [2, life\\_expectancy]\n",
         "\\end{align}\n",
         "\n",
         "**4. Updated Inventory:**\n",
