Add readme file

--- a/Data_center_operation_part1.ipynb
+++ b/Data_center_operation_part1.ipynb
@@ -1605,12 +1605,12 @@
         "\n",
         "**Energy Cost at time step ts**\n",
         "\\begin{align}\n",
-        "    \\text{energy\\_cost}_{ts} &= \\sum_{sg \\in SG} \\sum_{dc \\in DC} \\text{energy\\_prices}_{sg, dc} \\times \\sum_{life \\in LIFE} I_{ts, sg, dc, life}\n",
+        "    \\text{energy\\_cost}_{ts} &= \\sum_{sg \\in SG} \\sum_{dc \\in DC} \\text{energy\\_prices}_{sg, dc} \\times \\sum_{life \\in lifespan} I_{ts, sg, dc, life}\n",
         "\\end{align}\n",
         "\n",
         "**Maintenance Cost at time step ts**\n",
         "\\begin{align}\n",
-        "    \\text{maintenance\\_cost}_{ts} &= \\sum_{sg \\in SG} \\sum_{dc \\in DC} \\sum_{life \\in lifespan} \\text{get\\_maintenance\\_cost}(\\text{maintain\\_cost}_{sg}, life) \\times I_{ts, sg, dc, life}\n",
+        "    \\text{maintenance\\_cost}_{ts} &= \\sum_{sg \\in SG} \\sum_{dc \\in DC} \\sum_{life \\in lifespan} \\text{get\\_maintenance\\_cost}(\\text{maintain\\_cost}_{sg, life}) \\times I_{ts, sg, dc, life}\n",
         "\\end{align}\n",
         "\n",
         "**Moving Cost at time step ts**\n",
@@ -2392,7 +2392,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# utilisation_df = pd.read_csv(\"result/utilisation_df_1741.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -2433,6 +2442,7 @@
         "g_cpu.set_axis_labels(\"Time Step\", \"Values\")\n",
         "g_cpu.fig.suptitle('CPU Server Generations - Capacity vs Demand', y=1.02)\n",
         "plt.tight_layout()\n",
+        "plt.savefig(\"photo/utilisation_cpu.jpg\")\n",
         "plt.show()\n",
         "\n",
         "# Plot for GPU group\n",
@@ -2448,6 +2458,7 @@
         "g_gpu.set_axis_labels(\"Time Step\", \"Values\")\n",
         "g_gpu.fig.suptitle('GPU Server Generations - Capacity vs Demand', y=1.02)\n",
         "plt.tight_layout()\n",
+        "plt.savefig(\"photo/utilisation_gpu.jpg\")\n",
         "plt.show()\n"
       ]
     },
@@ -2460,7 +2471,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "business_metric = pd.read_csv(\"result/business_metric_1741.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -2590,7 +2610,7 @@
               "[168 rows x 4 columns]"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2601,7 +2621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -2637,14 +2657,41 @@
         "\n",
         "# Show the plot\n",
         "plt.tight_layout()\n",
+        "plt.savefig(\"photo/business_trend.jpg\")\n",
         "plt.show()\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
+      "source": [
+        "# Extra"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Senario Analysis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "An important requirements in many MO problems is scenario analysis, also known as what-if analysis. Generally speaking, in what-if analysis, we're interested in understanding how the solution changes under various scenarios. Consider our case here:\n",
+        "\n",
+        "- How does the solution change if each server generation has a different life expectancy? In reality, servers have varying life expectancies.\n",
+        "- What if utilization is prioritized over profit?\n",
+        "- What if a new data center is added, or an existing data center is expanded?\n",
+        "- What if we can adjust the selling prices to increase profit?\n",
+        "\n",
+        "Our model here is still a simple model. But you can imagine the value that the scenario analysis can provide. It can enable you to answer many questions by creating and comparing different scenarios and evaluating their outcomes, so that you can assess their impacts on the business goals."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
