--- a/Data_center_operation_part1.ipynb
+++ b/Data_center_operation_part1.ipynb
@@ -138,7 +138,11 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from scipy.stats import truncweibull_min\n",
-        "from tqdm import tqdm"
+        "from tqdm import tqdm\n",
+        "import warnings\n",
+        "\n",
+        "# Suppress all warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
       ]
     },
     {
