--- a/data_center_operation_part2.ipynb
+++ b/data_center_operation_part2.ipynb
@@ -1474,7 +1474,7 @@
         "-  $server\\_capacity_{sg}\\quad$: Capacity of server generation $sg$\n",
         "-  $data\\_center\\_slots_{dc}\\quad$: Slot size of data center $dc$\n",
         "-  $renting\\_prices_{sg,ls}\\quad$: Renting prices of a pair $(sg, ls)$\n",
-        "-  $actual\\_demand\\_var_{ts, sg, ls}\\quad$: Demand of server generation $sg$ with latency sensitivity $ls$ at time step $ts$ before pricing strategy.\n",
+        "-  $actual\\_demand_{ts, sg, ls}\\quad$: Demand of server generation $sg$ with latency sensitivity $ls$ at time step $ts$ before pricing strategy.\n",
         "\n",
         "We have modified these sets and parameters in `Load Required Data`"
       ]
