--- a/data_center_operation_part2.ipynb
+++ b/data_center_operation_part2.ipynb
@@ -1654,7 +1654,7 @@
         "Price strategy\n",
         "\n",
         "\\begin{align}\n",
-        "    \\exists \\, \\text{prices} \\, p_{sg}, p_{ls} \\, : \\, Z_{p_{sg}, p_{ls}} \\rightarrow D_{p_{sg}, p_{ls}}\n",
+        "    \\exists \\, \\text{prices} \\, p_{ts, sg, ls} \\, : \\, Z_{ts, sg, ls} \\rightarrow D_{ts, sg, ls}\n",
         "\\end{align}\n",
         "\n",
         "The $min\\_recorded_{ts, sg, ls}$ values were calculated in the first part of the optimisation problem\n",
