--- a/data_center_operation_part2.ipynb
+++ b/data_center_operation_part2.ipynb
@@ -1475,6 +1475,7 @@
         "-  $data\\_center\\_slots_{dc}\\quad$: Slot size of data center $dc$\n",
         "-  $renting\\_prices_{sg,ls}\\quad$: Renting prices of a pair $(sg, ls)$\n",
         "-  $actual\\_demand_{ts, sg, ls}\\quad$: Demand of server generation $sg$ with latency sensitivity $ls$ at time step $ts$ before pricing strategy.\n",
+        "-  $min\\_recorded_{ts, sg, ls}\\quad$: The minimum recorded demand (or capacity used) for server generation $sg$ with latency sensitivity $ls$ at time step $ts$ in the [first stage optimisation problem](https://github.com/Tayerquach/data_center_operations/blob/master/Data_center_operation_part1.ipynb).\n",
         "\n",
         "We have modified these sets and parameters in `Load Required Data`"
       ]
