--- a/data_center_operation_part2.ipynb
+++ b/data_center_operation_part2.ipynb
@@ -1663,7 +1663,7 @@
         "    min\\_var_{ts, sg, ls} \\leq Z^{f}_{ts, sg, ls} \\\\\n",
         "    min\\_var_{ts, sg, ls} \\leq demand\\_var{ts, sg, ls} \\\\\n",
         "    min\\_var_{ts, sg, ls} = min\\_recorded_{ts, sg, ls} \\\\\n",
-        "    &\\forall \\ ts \\in T, dc \\in DC\n",
+        "    &\\forall \\ ts \\in T, sg \\in SG, ls \\in LS\n",
         "\\end{align}"
       ]
     },
