--- a/Data_center_operation_part1.ipynb
+++ b/Data_center_operation_part1.ipynb
@@ -1485,7 +1485,7 @@
         "\\begin{align}\n",
         "    min\\_var_{ts, sg, ls} \\leq Z^{f}_{ts, sg, ls} \\\\\n",
         "    min\\_var_{ts, sg, ls} \\leq demand_{ts, sg, ls}\n",
-        "    &\\forall \\ ts \\in T, dc \\in DC\n",
+        "    &\\forall \\ ts \\in T, sg \\in SG, ls \\in LS\n",
         "\\end{align}"
       ]
     },
