--- a/data_center_operation_part2.ipynb
+++ b/data_center_operation_part2.ipynb
@@ -1661,7 +1661,7 @@
         "The $min\\_recorded_{ts, sg, ls}$ values were calculated in the first part of the optimisation problem\n",
         "\\begin{align}\n",
         "    min\\_var_{ts, sg, ls} \\leq Z^{f}_{ts, sg, ls} \\\\\n",
-        "    min\\_var_{ts, sg, ls} \\leq demand\\_var{ts, sg, ls} \\\\\n",
+        "    min\\_var_{ts, sg, ls} \\leq demand\\_var_{ts, sg, ls} \\\\\n",
         "    min\\_var_{ts, sg, ls} = min\\_recorded_{ts, sg, ls} \\\\\n",
         "    &\\forall \\ ts \\in T, sg \\in SG, ls \\in LS\n",
         "\\end{align}"
